<project xmlns="http://maven.apache.org/POM/4.0.0"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.eclipse.lemminx</groupId>
	<artifactId>lemminx-maven</artifactId>
	<version>0.2.0-SNAPSHOT</version>

	<licenses>
		<license>
			<name>Eclipse Public License (EPL) v2.0</name>
			<url>https://www.eclipse.org/org/documents/epl-2.0/EPL-2.0.html</url>
		</license>
	</licenses>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<lemminx.maven.indexDirectory>${project.build.directory}/test-index</lemminx.maven.indexDirectory>
		<maven.repo.local>${settings.localRepository}</maven.repo.local>
		<test>org.eclipse.lemminx.extensions.maven.test.AllTests</test>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.lemminx</groupId>
			<artifactId>org.eclipse.lemminx</artifactId>
			<version>0.14.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-artifact</artifactId>
			<version>3.6.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>3.6.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>3.6.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-embedder</artifactId>
			<version>3.6.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-impl</artifactId>
			<version>1.6.1</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-compat</artifactId>
			<version>3.6.3</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.aether</groupId>
			<artifactId>aether-connector-basic</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>io.takari.aether</groupId>
			<artifactId>aether-connector-okhttp</artifactId>
			<version>0.17.8</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.indexer</groupId>
			<artifactId>indexer-core</artifactId>
			<version>6.0.0</version>
			<exclusions>
				<exclusion>
					<groupId>com.google.inject</groupId>
					<artifactId>guice</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.indexer</groupId>
			<artifactId>indexer-cli</artifactId>
			<version>6.0.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.wagon</groupId>
			<artifactId>wagon-http</artifactId>
			<version>3.4.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.wagon</groupId>
			<artifactId>wagon-file</artifactId>
			<version>3.4.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpclient</artifactId>
			<version>4.5.13</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-invoker-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>provision-test-localrepo</id>
						<goals><goal>run</goal></goals>
						<phase>generate-test-resources</phase>
						<configuration>
							<goals><goal>dependency:go-offline</goal></goals>
							<localRepositoryPath>${project.build.directory}/testlocalrepo</localRepositoryPath>
							<pom>src/test/resources/pom-localrepo-test-dependencies.xml</pom>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<systemPropertyVariables>
						<lemminx.maven.indexDirectory>${lemminx.maven.indexDirectory}</lemminx.maven.indexDirectory>
						<maven.repo.local>${project.build.directory}/testlocalrepo</maven.repo.local>
						<remoteRepoURL>file:${basedir}/src/test/resources/remoteRepo</remoteRepoURL>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>
				<configuration>
					<descriptors>
						<descriptor>src/assembly/deps.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>zip-with-dependencies</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>lemminx-releases</id>
			<url>https://repo.eclipse.org/content/repositories/lemminx-releases/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>repo.eclipse.org</id>
			<name>lemminx-releases</name>
			<url>https://repo.eclipse.org/content/repositories/lemminx-releases/</url>
		</repository>
		<snapshotRepository>
			<id>repo.eclipse.org</id>
			<name>lemminx-snapshots</name>
			<url>https://repo.eclipse.org/content/repositories/lemminx-snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.inject</groupId>
				<artifactId>guice</artifactId>
				<version>4.2.3</version>
				<classifier>no_aop</classifier>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.4</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>com.google.guava</groupId>
				<artifactId>guava</artifactId>
				<version>27.0.1-jre</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>1.9.2</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
